src/App.css
/* ... */
.what-note-header {
  text-transform: uppercase;
  letter-spacing: 1px;
  width: 85%;
  font-family: 'Open Sans', sans-serif;
  color: #000;
  background-color: rgba(71, 227, 255, 0.89);
  backdrop-filter: blur(10px);
  border-radius: 6px;
  padding: 8px 16px;
  font-size: 28px;
  margin-bottom: 30px;
  border: 3px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
}

.button-options-container {
  gap: 6px;
  margin-top: 15px;
}

.incorrect-answer-border {
  color: red;
  border: 3px solid red;
}

.correct-answer-border {
  color: rgb(51, 255, 51);
  border: 3px solid rgb(51, 255, 51);
}

.button-options-container button {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
  color: #000;
  font-weight: 600;
  cursor: pointer;
  border: 3px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  margin: 0 5px;
  font-size: 16px;
  background-color: rgb(71, 227, 255);
}

.score-container {
  display: flex;
  position: relative;
  width: 335px;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  margin-bottom: 0;
  color: #000;
  border: 3px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
}

.time-remaining {
  width: 80px;
  letter-spacing: 2px;
  font-size: 28px;
  font-weight: 600;
  margin: 0;
  margin-right: 30px;
  padding: 6px 0;
}

.score {
  letter-spacing: 2px;
  font-size: 28px;
  font-weight: 600;
  margin: 0;
  padding: 6px 0;
}

.animations-container {
  height: 1px;
  margin: 0;
  position: relative;
  width: 800px;
}

.animation-plus-one {
  display: flex;
  justify-content: center;
  align-items: center;
  position: absolute;
  left: 0;
  margin-top: 30px;
  z-index: 100;
  font-size: 25px;
  font-weight: 600;
  height: 40px;
  width: 40px;
  border-radius: 50%;
  padding: 5px;
  border: 3px solid;
  font-family: 'Open Sans', sans-serif;
  opacity: 0;
  animation: moveUpAndFade 2.5s ease forwards;
}

.one-minute-timer-options-container {
  width: 300px;
  margin-left: 66px;
  color: #000;
}

.restart-timer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.3em 0.4em;
  font-size: 16px;
  border: 3px solid;
  background-color: rgb(255, 246, 125);
}

.restart-timer:hover {
  background-color: rgb(250, 240, 94);
  cursor: pointer;
}

.restart-timer svg {
  font-size: 18px;
  margin-right: 4px;
}

.restart-timer p {
  font-size: 14px;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

.start-timer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.3em 0.4em;
  font-size: 16px;
  border: 3px solid;
  border-left: 0px;
  background-color: rgb(125, 251, 255);
}

.start-timer:hover {
  cursor: pointer;
  background-color: rgb(98, 243, 248);
}

.start-timer svg {
  font-size: 18px;
  margin-right: 4px;
}

.start-timer p {
  font-size: 14px;
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  font-weight: 600;
}

.one-minute-timer-options {
  display: flex;
  justify-content: end;
}

.note-input-field-container .input-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.note-input-field-container .button-options-container {
  display: none;
}

.note-input-field-container .input-button-container button {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  letter-spacing: 2px;
  text-decoration: none;
  text-transform: uppercase;
  color: #000;
  background-color: rgba(9, 226, 255, 0.527);
  font-weight: 600;
  cursor: pointer;
  border: 3px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
  position: relative;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  margin: 0 15px;
}

.note-input-field-container .input-button-container button:disabled {
  background-color: rgba(236, 236, 236, 0.527);
  border: 3px solid #000;
  cursor: not-allowed;
}

.note-input-field-container .input-button-container input {
  width: 40px;
  height: 40px;
  font-size: 30px;
  font-weight: 500;
  text-align: center;
  border-radius: 8px;
  background-color: rgb(248, 248, 248);
  border: 2px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
}

.note-input-field-container .input-button-container input:focus {
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
}

.note-input-field-container input:focus {
  border: 2px solid rgba(0, 0, 0, 0.3);
}

.all-notes {
  font-size: 15px;
  width: 450px;
  text-align: center;
  margin-top: 8px;
  font-family: 'Open Sans', sans-serif;
}

/* Notes Modal */
.react-responsive-modal-modal {
  background: rgb(248, 248, 248) !important;
}

.notes-modal {
  width: 100%;
  height: 800px;
}

/* One Minute timer game modal css start */

.one-minute-timer-modal-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.notes-guess-container {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  height: 80%;
}

.how-many-notes-guess-container {
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border: 3px solid;
  padding: 0.35em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px,
    5px 5px 0px 0px;
  text-align: center;
}

.how-many-notes-guess-container h2 {
  font-size: 24px;
}
/* ... */

